--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </p>
         <div class="redes">
             <a href="https://github.com/paulina-11" target="_blank"><img src="img/GitHub.png" alt="github" /></a>
-            <a href="https://www.linkedin.com/in/paulina-avila-l93" target="_blank"><img src="imG/LinkedIn Circled.png"
+            <a href="https://www.linkedin.com/in/paulina-avila-l93" target="_blank"><img src="img/LinkedIn.png"
                     alt="linkedin" /></a>
         </div>
         <div class="linea"></div>
